<resources>
    <string name="app_name">FarmersCenter</string>

    <string name="api_key">AIzaSyBKO_b9klJQTc971sfPOe62iMei0N4u0cM</string>
<!--    <string name="api_key">AIzaSyD-KKOkyzT7OBeafRlpuDwtU3iz5P7GUsI</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to FarmersCenter</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter your Password</string>
    <string name="login">LOGIN</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="farm_info">Farm Info</string>
    <string name="farmer_s_info">Farmer\'s Info</string>
    <string name="add_farmers_data">Add Farmers Data</string>
    <string name="farmers_image">Farmers Image</string>
    <string name="farmers_onboard_image">Farmers Onboard Image</string>
    <string name="farmers_name">Farmer\'s Name</string>
    <string name="farm_name">Farm Name</string>
    <string name="delete_all_records">Delete All Records</string>
    <string name="delete_record">Delete Record</string>
    <string name="title_activity_maps">Map</string>
    <string name="farmers_age">Farmer\'s Age</string>
    <string name="farm_location">Farm Location</string>
    <string name="take_farmers_picture">Take Farmers Picture</string>
    <string name="pick_farm_coordinates">Pick Farm Coordinates</string>
    <string name="save_data">SAVE DATA</string>
    <string name="set_polygon">Set Polygon for farm area</string>
    <string name="back_arrow">Back arrow</string>
    <string name="farmer_s_address">Farmer\'s Address</string>
    <string name="no_records">No records yet, click the button below to start onboarding farmers.</string>
</resources>
