<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailsScreenFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/PPR_FULL_WHITE">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/details_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/back_arrow"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/details_toolbar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:textColor="@color/PPR_FULL_WHITE"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="SeybelFarms" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/PPR_BLUE_GREY800"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp">

            <ImageView
                android:id="@+id/details_farmers_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:contentDescription="@string/farmers_onboard_image"
                app:srcCompat="@drawable/ic_add_circle" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/farmers_name"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/details_farmers_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Seybel"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/farmers_age"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/details_farmers_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="24" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/farmer_s_address"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/details_farm_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="Lagos, Nigeria" />


        <Button
            android:id="@+id/show_farm_coordinate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/white_ripple_effect"
            android:layout_margin="30dp"
            android:text="Show Farm Cooridinates"
            android:textSize="20sp"
            android:textColor="@color/PPR_FULL_WHITE" />


    </LinearLayout>

</ScrollView>